# doculens

./: .gitignore  README.md  pyproject.toml
doculens/: base.py  gpt4o_model.py  multimodal_app.py
utils/: gpt.py
